workloads/kube-burner/workloads/large-networkpolicy-egress/case-networkpolicy-allowdns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: case-amadeus-mgob-allow-dns
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 10.128.0.0/16
        #- from:
        #- ipBlock:
        #cidr: 10.0.0.0/8
  - from:
    - ipBlock:
        cidr: 172.30.0.0/16
  egress:
  - to:
    - ipBlock:
        cidr: 10.128.0.0/14
    - ipBlock:
        cidr: 172.30.0.0/16
    - ipBlock:
        cidr: 8.8.8.8/32
    - ipBlock:
        cidr: 8.8.8.4/32
    ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
      podSelector:
        matchLabels:
          dns.operator.openshift.io/daemonset-dns: default
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
