workloads/kube-burner/workloads/large-networkpolicy-egress/default-allow-api-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-api-server
spec:
  egress:
  - ports:
    - port: 6443
      protocol: TCP
    to:    
    - ipBlock:
        cidr: 10.57.72.7/32
  - ports:
    - port: 6443
      protocol: TCP
    to:    
    - ipBlock:
        cidr: 10.57.72.8/32
  - ports:
    - port: 6443
      protocol: TCP
    to:    
    - ipBlock:
        cidr: 10.57.72.9/32
  ingress:
  - from:
    - ipBlock:
        cidr: 10.225.0.2/32
  - from:
    - ipBlock:
        cidr: 10.225.1.2/32
  - from:
    - ipBlock:
        cidr: 10.225.2.2/32
  podSelector: {}       
  policyTypes:
  - Ingress
  - Egress
---
