workloads/kube-burner/workloads/large-networkpolicy-egress/deny-all.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
spec:
  podSelector: {}
  ingress: []
  policyTypes:
  - Ingress
  - Egress
